--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,3 +1,10 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+
+@layer base {
+  .font-outline-1 {
+    -webkit-text-stroke: 0.5px black;
+  }
+}
